--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,14 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-<!--HOLA MUNDO JAVA WEB ISABEL-->
-<a href="BuscarPatologia?id=9">ENLACE</a>
-
-<!--<form action="ObtenerInfoPatologia" method=post>
+<!--HOLA MUNDO JAVA WEB ISABEL
+<a href="BuscarPatologia?id=9">ENLACE</a>-->
+<form action="BuscarPatologia" method=get>
 	<BR>Introduzca el id de una patología y pulse Enviar<BR>
 	<input type=text name=id>
 	<BR><input type=submit title="ENVIAR datos al Servlet" value="ENVIAR">
 </form>
--->
+
 </body>
 </html>
